--- a/classes/BLEEddystoneTLMBuilder.html
+++ b/classes/BLEEddystoneTLMBuilder.html
@@ -26,7 +26,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">BLEEddystoneTLMBuilder</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L88">src/data/BLEEddystoneTLM.ts:88</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L88">src/data/BLEEddystoneTLM.ts:88</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -51,6 +51,7 @@
 <a href="BLEEddystoneTLMBuilder.html#uptime" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>uptime</span></a>
 <a href="BLEEddystoneTLMBuilder.html#voltage" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>voltage</span></a>
 <a href="BLEEddystoneTLMBuilder.html#create" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a>
+<a href="BLEEddystoneTLMBuilder.html#fromBeacon" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>from<wbr/>Beacon</span></a>
 </div></section></div></details></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Constructors</h2>
@@ -62,7 +63,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L89">src/data/BLEEddystoneTLM.ts:89</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L89">src/data/BLEEddystoneTLM.ts:89</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-is-protected tsd-is-inherited"><a id="beacon" class="tsd-anchor"></a>
@@ -70,7 +71,7 @@
 <div class="tsd-signature"><span class="tsd-kind-property">beacon</span><span class="tsd-signature-symbol">:</span> <a href="BLEEddystoneTLM.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLM</a></div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#beacon">beacon</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member"><a id="advertiseCount" class="tsd-anchor"></a>
@@ -85,7 +86,7 @@
 <h5><span class="tsd-kind-parameter">count</span>: <span class="tsd-signature-type">number</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L120">src/data/BLEEddystoneTLM.ts:120</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L126">src/data/BLEEddystoneTLM.ts:126</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="build" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>build</span><a href="#build" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -94,7 +95,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="BLEEddystoneTLM.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLM</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#build">build</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L125">src/data/BLEEddystoneTLM.ts:125</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L131">src/data/BLEEddystoneTLM.ts:131</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="calibratedRSSI" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>calibratedRSSI</span><a href="#calibratedRSSI" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -108,7 +109,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#calibratedRSSI">calibratedRSSI</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L100">src/data/BLEEddystoneTLM.ts:100</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L106">src/data/BLEEddystoneTLM.ts:106</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="displayName" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>display<wbr/>Name</span><a href="#displayName" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -122,7 +123,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#displayName">displayName</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="macAddress" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>mac<wbr/>Address</span><a href="#macAddress" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -136,7 +137,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li>
 <li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-2"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a><a href="#macAddress.macAddress-2" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-parameters">
@@ -147,7 +148,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L36">src/data/BLEBeaconObject.ts:36</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L36">src/data/BLEBeaconObject.ts:36</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="temperature" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>temperature</span><a href="#temperature" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -162,7 +163,7 @@
 <h5><span class="tsd-kind-parameter">unit</span>: <span class="tsd-signature-type ">TemperatureUnit</span><span class="tsd-signature-symbol"> = TemperatureUnit.CELCIUS</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L110">src/data/BLEEddystoneTLM.ts:110</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L116">src/data/BLEEddystoneTLM.ts:116</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="uptime" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>uptime</span><a href="#uptime" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -177,7 +178,7 @@
 <h5><span class="tsd-kind-parameter">unit</span>: <span class="tsd-signature-type ">TimeUnit</span><span class="tsd-signature-symbol"> = TimeUnit.SECOND</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L115">src/data/BLEEddystoneTLM.ts:115</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L121">src/data/BLEEddystoneTLM.ts:121</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="voltage" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>voltage</span><a href="#voltage" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -190,7 +191,7 @@
 <h5><span class="tsd-kind-parameter">voltage</span>: <span class="tsd-signature-type">number</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L105">src/data/BLEEddystoneTLM.ts:105</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L111">src/data/BLEEddystoneTLM.ts:111</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="create" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagStatic">Static</code> <span>create</span><a href="#create" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -198,7 +199,20 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneTLM.ts#L96">src/data/BLEEddystoneTLM.ts:96</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L96">src/data/BLEEddystoneTLM.ts:96</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member"><a id="fromBeacon" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagStatic">Static</code> <span>from<wbr/>Beacon</span><a href="#fromBeacon" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures">
+<li class="tsd-signature tsd-anchor-link" id="fromBeacon.fromBeacon-1"><span class="tsd-kind-call-signature">from<wbr/>Beacon</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">beacon</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a><a href="#fromBeacon.fromBeacon-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">beacon</span>: <a href="BLEEddystoneTLM.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLM</a></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEEddystoneTLMBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneTLMBuilder</a></h4><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneTLM.ts#L100">src/data/BLEEddystoneTLM.ts:100</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -227,7 +241,8 @@
 <li><a href="#temperature" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>temperature</span></a></li>
 <li><a href="#uptime" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>uptime</span></a></li>
 <li><a href="#voltage" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>voltage</span></a></li>
-<li><a href="#create" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a></li></ul></div></details></div>
+<li><a href="#create" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a></li>
+<li><a href="#fromBeacon" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>from<wbr/>Beacon</span></a></li></ul></div></details></div>
 <div class="site-menu">
 <nav class="tsd-navigation"><a href="../modules.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1"></use></svg><span>@openhps/rf</span></a>
 <ul class="tsd-small-nested-navigation" id="tsd-nav-container" data-base="..">
