--- a/classes/BLEEddystoneURLBuilder.html
+++ b/classes/BLEEddystoneURLBuilder.html
@@ -26,7 +26,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">BLEEddystoneURLBuilder</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneURL.ts#L82">src/data/BLEEddystoneURL.ts:82</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L82">src/data/BLEEddystoneURL.ts:82</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -49,6 +49,7 @@
 <a href="BLEEddystoneURLBuilder.html#macAddress" class="tsd-index-link tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a>
 <a href="BLEEddystoneURLBuilder.html#url-1" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>url</span></a>
 <a href="BLEEddystoneURLBuilder.html#create" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a>
+<a href="BLEEddystoneURLBuilder.html#fromBeacon" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>from<wbr/>Beacon</span></a>
 </div></section></div></details></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Constructors</h2>
@@ -60,7 +61,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneURL.ts#L83">src/data/BLEEddystoneURL.ts:83</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L83">src/data/BLEEddystoneURL.ts:83</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-is-protected tsd-is-inherited"><a id="beacon" class="tsd-anchor"></a>
@@ -68,7 +69,7 @@
 <div class="tsd-signature"><span class="tsd-kind-property">beacon</span><span class="tsd-signature-symbol">:</span> <a href="BLEEddystoneURL.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURL</a></div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#beacon">beacon</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member"><a id="build" class="tsd-anchor"></a>
@@ -79,7 +80,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="BLEEddystoneURL.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURL</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#build">build</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneURL.ts#L131">src/data/BLEEddystoneURL.ts:131</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L137">src/data/BLEEddystoneURL.ts:137</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="calibratedRSSI" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>calibratedRSSI</span><a href="#calibratedRSSI" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -93,7 +94,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#calibratedRSSI">calibratedRSSI</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneURL.ts#L98">src/data/BLEEddystoneURL.ts:98</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L104">src/data/BLEEddystoneURL.ts:104</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="displayName" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>display<wbr/>Name</span><a href="#displayName" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -107,7 +108,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#displayName">displayName</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-protected"><a id="getEncodedURL" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>get<wbr/>EncodedURL</span><a href="#getEncodedURL" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-protected">
@@ -120,7 +121,7 @@
 <li class="tsd-parameter">
 <h5><span class="tsd-kind-property">url</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type ">DataView</span></h5></li></ul><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneURL.ts#L102">src/data/BLEEddystoneURL.ts:102</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L108">src/data/BLEEddystoneURL.ts:108</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="macAddress" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>mac<wbr/>Address</span><a href="#macAddress" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -134,7 +135,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li>
 <li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-2"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a><a href="#macAddress.macAddress-2" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-parameters">
@@ -145,7 +146,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEBeaconObject.ts#L36">src/data/BLEBeaconObject.ts:36</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEBeaconObject.ts#L36">src/data/BLEBeaconObject.ts:36</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="url-1" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>url</span><a href="#url-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -158,7 +159,7 @@
 <h5><span class="tsd-kind-parameter">url</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneURL.ts#L93">src/data/BLEEddystoneURL.ts:93</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L99">src/data/BLEEddystoneURL.ts:99</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="create" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagStatic">Static</code> <span>create</span><a href="#create" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -166,7 +167,20 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/92b2bb3/src/data/BLEEddystoneURL.ts#L89">src/data/BLEEddystoneURL.ts:89</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L89">src/data/BLEEddystoneURL.ts:89</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member"><a id="fromBeacon" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagStatic">Static</code> <span>from<wbr/>Beacon</span><a href="#fromBeacon" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures">
+<li class="tsd-signature tsd-anchor-link" id="fromBeacon.fromBeacon-1"><span class="tsd-kind-call-signature">from<wbr/>Beacon</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">beacon</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a><a href="#fromBeacon.fromBeacon-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">beacon</span>: <a href="BLEEddystoneURL.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURL</a></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></h4><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d8148f7/src/data/BLEEddystoneURL.ts#L93">src/data/BLEEddystoneURL.ts:93</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -193,7 +207,8 @@
 <li><a href="#getEncodedURL" class="tsd-is-protected"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>get<wbr/>EncodedURL</span></a></li>
 <li><a href="#macAddress" class="tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a></li>
 <li><a href="#url-1" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>url</span></a></li>
-<li><a href="#create" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a></li></ul></div></details></div>
+<li><a href="#create" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a></li>
+<li><a href="#fromBeacon" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>from<wbr/>Beacon</span></a></li></ul></div></details></div>
 <div class="site-menu">
 <nav class="tsd-navigation"><a href="../modules.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1"></use></svg><span>@openhps/rf</span></a>
 <ul class="tsd-small-nested-navigation" id="tsd-nav-container" data-base="..">
